More style changes + Overlapping problem fixed + Search form Scrollbar adjusted

--- a/src/Components/GenreChart/GenreChart.css
+++ b/src/Components/GenreChart/GenreChart.css
@@ -6,4 +6,5 @@
         padding: 1em;
         width: 100%;
         height: 400px;
+        white-space: normal;
     }
